--- a/index.html
+++ b/index.html
@@ -116,40 +116,100 @@
 <section id="certifications" class="py-20">
   <div class="max-w-6xl mx-auto px-6">
     <h3 class="text-3xl font-bold text-blue-500 mb-10">Certifications</h3>
+
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
 
+      <!-- Tata Certificate -->
       <div class="bg-slate-900 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
-        <img src="images/tata.png" alt="Tata Certificate" class="w-full h-60 object-cover cursor-pointer" >
+        <img src="images/tata.png" alt="Tata Certificate"
+             class="w-full h-60 object-cover cursor-pointer"
+             onclick="openZoom(this.src)">
         <div class="p-4">
-          <h4 class="text-white font-semibold text-lg">Empowering Business with Effective Insights</h4>
-          <p class="text-gray-400 text-sm">Dashboard & Data Visualization</p>
-           <a href="https://www.theforage.com/completion-certificates/ifobHAoMjQs9s6bKS/MyXvBcppsW2FkNYCX_ifobHAoMjQs9s6bKS_695a3448f76d215bcfd1995f_1767543688715_completion_certificate.pdf" class="text-blue-400 mt-4 block">viwe certificat →</a>
+          <h4 class="text-white font-semibold text-lg">
+            Empowering Business with Effective Insights
+          </h4>
+          <p class="text-gray-400 text-sm">
+            Dashboard & Data Visualization
+          </p>
+          <a href="https://www.theforage.com/completion-certificates/ifobHAoMjQs9s6bKS/MyXvBcppsW2FkNYCX_ifobHAoMjQs9s6bKS_695a3448f76d215bcfd1995f_1767543688715_completion_certificate.pdf"
+             class="text-blue-400 mt-4 block">
+            View Certificate →
+          </a>
         </div>
       </div>
+
+      <!-- Power BI Certificate -->
       <div class="bg-slate-900 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
-        <img src="images/Power_bi.png" alt="Power BI Certificate" class="w-full h-60 object-cover cursor-pointer">
+        <img src="images/Power_bi.png" alt="Power BI Certificate"
+             class="w-full h-60 object-cover cursor-pointer"
+             onclick="openZoom(this.src)">
         <div class="p-4">
-          <h4 class="text-white font-semibold text-lg">POWER BI Data Analytics</h4>
-          <p class="text-gray-400 text-sm">Dashboard & Data Visualization</p>
+          <h4 class="text-white font-semibold text-lg">
+            POWER BI Data Analytics
+          </h4>
+          <p class="text-gray-400 text-sm">
+            Dashboard & Data Visualization
+          </p>
         </div>
       </div>
+
+      <!-- SQL Certificate -->
       <div class="bg-slate-900 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
-        <img src="images/Sql.png" alt="SQL Certificate" class="w-full h-60 object-cover cursor-pointer">
+        <img src="images/Sql.png" alt="SQL Certificate"
+             class="w-full h-60 object-cover cursor-pointer"
+             onclick="openZoom(this.src)">
         <div class="p-4">
-          <h4 class="text-white font-semibold text-lg">SQL Data Analytics</h4>
-          <p class="text-gray-400 text-sm">Advanced Queries & Data Handling</p>
+          <h4 class="text-white font-semibold text-lg">
+            SQL Data Analytics
+          </h4>
+          <p class="text-gray-400 text-sm">
+            Advanced Queries & Data Handling
+          </p>
         </div>
       </div>
-       <div class="bg-slate-900 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
-        <img src="images/master.png" alt="Power BI Certificate" class="w-full h-60 object-cover cursor-pointer">
+
+      <!-- Advisors Job Simulation -->
+      <div class="bg-slate-900 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
+        <img src="images/master.png" alt="Advisors Certificate"
+             class="w-full h-60 object-cover cursor-pointer"
+             onclick="openZoom(this.src)">
         <div class="p-4">
-          <h4 class="text-white font-semibold text-lg">POWER BI Data Analytics</h4>
-          <p class="text-gray-400 text-sm">Dashboard & Data Visualization</p>
-          <a href="https://www.theforage.com/completion-certificates/mfxGwGDp6WkQmtmTf/DZxgGgvMB6cEtEyJg_mfxGwGDp6WkQmtmTf_695a3448f76d215bcfd1995f_1768814375304_completion_certificate.pdf" class="text-blue-400 mt-4 block">viwe certificat →</a>
+          <h4 class="text-white font-semibold text-lg">
+            Advisors & Consulting Services Job Simulation
+          </h4>
+          <p class="text-gray-400 text-sm">
+            Promotion Optimization & Data-Driven Storytelling
+          </p>
+          <a href="https://www.theforage.com/completion-certificates/mfxGwGDp6WkQmtmTf/DZxgGgvMB6cEtEyJg_mfxGwGDp6WkQmtmTf_695a3448f76d215bcfd1995f_1768814375304_completion_certificate.pdf"
+             class="text-blue-400 mt-4 block">
+            View Certificate →
+          </a>
         </div>
+      </div>
+
+      <!-- Nasscom Certificate -->
+      <div class="bg-slate-900 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
+        <img src="images/Nasscom.png" alt="Nasscom Certificate"
+             class="w-full h-60 object-cover cursor-pointer"
+             onclick="openZoom(this.src)">
+        <div class="p-4">
+          <h4 class="text-white font-semibold text-lg">
+            Data Visualization & Analytics
+          </h4>
+          <p class="text-gray-400 text-sm">
+            Visualization & Analytics
+          </p>
+          <a href="https://fsp-assessment-certificates.s3.ap-southeast-1.amazonaws.com/%27/s3/buckets/fsp-assessment-certificates%27/Suraj%2Bsahu_156888889.pdf.pdf"
+             class="text-blue-400 mt-4 block">
+            View Certificate →
+          </a>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
+
 
 <!-- PROJECTS -->
 <section id="projects" class="py-20 bg-slate-800">
