--- a/index.html
+++ b/index.html
@@ -286,19 +286,19 @@
       </div>
        <div class="bg-slate-800 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
         <img src="images/sqlpic.png" alt="AAPL Dashboard" class="w-full h-60 object-cover cursor-pointer" onclick="openZoom(this.src)">
-        <div class="p-4 text-white font-semibold text-lg">AAPL Stock Dashboard ></div>
+        <div class="p-4 text-white font-semibold text-lg">Healthcare SQL Quari ></div>
       </div>
        <div class="bg-slate-800 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
         <img src="images/pai.png" alt="Blinkit Dashboard" class="w-full h-60 object-cover cursor-pointer" onclick="openZoom(this.src)">
-        <div class="p-4 text-white font-semibold text-lg">Blinkit Dashboard></div>
+        <div class="p-4 text-white font-semibold text-lg">Use python Blinkit Dashboard></div>
       </div>
         <div class="bg-slate-800 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
         <img src="images/bar1.png" alt="Blinkit Dashboard" class="w-full h-60 object-cover cursor-pointer" onclick="openZoom(this.src)">
-        <div class="p-4 text-white font-semibold text-lg">Blinkit Dashboard></div>
+        <div class="p-4 text-white font-semibold text-lg">Use python Blinkit Dashboard></div>
       </div>
         <div class="bg-slate-800 rounded-xl overflow-hidden shadow-lg hover:scale-105 transition duration-300">
         <img src="images/bar2.png" alt="Blinkit Dashboard" class="w-full h-60 object-cover cursor-pointer" onclick="openZoom(this.src)">
-        <div class="p-4 text-white font-semibold text-lg">Blinkit Dashboard></div>
+        <div class="p-4 text-white font-semibold text-lg">Use python Blinkit Dashboard></div>
       </div>
     </div>
   </div>
